Links em páginas novas
Linkando mais páginas html por meio do href

--- a/templates/dashboardaluno.html
+++ b/templates/dashboardaluno.html
@@ -29,7 +29,7 @@
         <!-- Seção de aulas -->
         <section>
             <h2>Minhas aulas</h2>
-            <a href="/inscrever">+ Inscreva-se</a>
+            <a href="tabelaaulas.html">+ Inscreva-se</a>
 
             <!-- Exemplo de aula inscrita -->
             <div>
