--- a/templates/dashboardadm.html
+++ b/templates/dashboardadm.html
@@ -28,20 +28,20 @@
         <!-- Seção de aulas -->
         <section>
             <h2>Aulas</h2>
-            <a href="/">+ Cadastrar aula</a>
+            <a href="cadastraraula.html">+ Cadastrar aula</a>
 
             <!-- Exemplo de aula inscrita -->
             <div>
                 <h3>Editar info</h3>
                 <p>Total : 12</p>
-                <a href="/cancelar/1">Excluir inscrição</a>
+                <a href="">Excluir inscrição</a>
             </div>
         </section>
 
         <!-- seção de alunos -->
         <section>
             <h2>Alunos</h2>
-            <a href="/cadastraraula">+ Cadastrar aluno</a>
+            <a href="cadastro.html">+ Cadastrar aluno</a>
 
             
             <div>
@@ -55,7 +55,7 @@
         <!-- seção professores-->
         <section>
             <h2>Professores</h2>
-            <a href="/cadastraraula">+ Cadastrar professor</a>
+            <a href="cadastrepro.html">+ Cadastrar professor</a>
 
             
             <div>
@@ -68,7 +68,7 @@
 
         <section>
             <h2>Modalidades</h2>
-            <a href="/cadastraraula">+ Cadastrar modalidade</a>
+            <a href="cadastremodalidade.html">+ Cadastrar modalidade</a>
 
             
             <div>
