--- a/templates/dashboardadm.html
+++ b/templates/dashboardadm.html
@@ -16,7 +16,6 @@
             <h2>ASCENDER</h2>
             <nav>
                 <a href="homesemnada.html">Sobre</a>
-                <a href= #>Perfil</a>
             </nav>
         </div>
     </header>
@@ -34,7 +33,7 @@
             <div>
                 <h3>Editar info</h3>
                 <p>Total : 12</p>
-                <a href="">Excluir inscrição</a>
+                <a href="excluirinscricao.html">Excluir inscrição</a>
             </div>
         </section>
 
@@ -47,7 +46,7 @@
             <div>
                 <h3>Editar info</h3>
                 <p>Total : 50</p>
-                <a href="/cancelar/1">Ver detalhes</a>
+                <a href="editaraluno.html">Ver detalhes</a>
             </div>
 
         </section>
@@ -61,7 +60,7 @@
             <div>
                 <h3>Editar info</h3>
                 <p>Total : 8</p>
-                <a href="/cancelar/1">Ver detalhes</a>
+                <a href="editarpro.html">Ver detalhes</a>
             </div>
 
          <!-- seção modalidade-->   
@@ -74,7 +73,7 @@
             <div>
                 <h3>Editar info</h3>
                 <p>Total : 5</p>
-                <a href="/cancelar/1">Ver detalhes</a>
+                <a href="editarmodalidade.html">Ver detalhes</a>
             </div>
 
 
